# myccl

./: CMakeLists.txt
lib/: CMakeLists.txt  ccl_parse.c  ccl_set.c
src/: CMakeLists.txt  test.c
